fix: fix horizontal scrollbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,7 @@ body {
   background: var(--desert-light);
   padding-top: 5rem;
   min-width: 320px;
+  overflow: hidden;
 }
 
 a {
